# adventofcode2023

./: .gitignore  Cargo.toml
day01/: Cargo.toml
day01/src/: lib.rs
day02/src/: lib.rs
day03/src/: lib.rs
day04/src/: lib.rs
day05/src/: lib.rs
day06/src/: lib.rs
day07/src/: lib.rs
day08/: Cargo.toml
day08/src/: lib.rs
day09/src/: lib.rs
day10/src/: lib.rs
day11/src/: lib.rs
day12/src/: lib.rs
day13/: Cargo.toml
day13/src/: lib.rs
day14/: Cargo.toml
day14/src/: lib.rs
day15/src/: lib.rs
day16/: Cargo.toml
day16/src/: lib.rs
day17/: Cargo.toml
day17/src/: lib.rs
day18/: Cargo.toml  big_map.txt
day18/src/: lib.rs
day19/: Cargo.toml
day19/src/: lib.rs
day20/: Cargo.toml
day20/src/: big.viz  lib.rs
day21/: Cargo.toml
day21/src/: lib.rs
day22/: Cargo.toml
day22/src/: lib.rs
day23/: Cargo.toml
day23/src/: lib.rs
day24/: Cargo.toml
day24-py/: big.sage  example.sage
day24/src/: lib.rs
day25-py/: big.viz  go.py  go2.py
