cargo-features = ["profile-rustflags"]

[workspace]
resolver = "2"
members = [
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "day06",
    "day07",
    "day08", "day09", "day10", "day11", "day12",
]

[profile.dev]
rustflags = ["-A", "dead_code"]

[workspace.dependencies]
regex = "1.10.2"
num = "0.4.1"
