[workspace]
resolver = "2"
members = [
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "day06",
    "day07",
    "day08",
    "day09",
    "day10",
    "day11",
    "day12",
    "day13",
    "day14",
    "day15",
    "day16",
    "day17",
    "day18",
    "day19",
    "day20",
    "day21",
    "day22",
    "day23",
    "day24",
]

[workspace.dependencies]
anyhow = "1.0.77"
ndarray = "0.15.6"
smallvec = "1.11.2"
stacker = "0.1.15"
num = "0.4.1"
regex = "1.10.2"
approx = "0.5.1"
z3 = "0.12.1"
